# queueHospital

./: .gitignore  .gitmodules  CMakeLists.txt  ClientConnectionHandler.cpp  ClientConnectionHandler.h  ConnectionHandler.h  DataConverter.cpp  DataConverter.h  Patient.cpp  Patient.h  PatientDataConverter.cpp  PatientDataConverter.h  PatientRepository.cpp  PatientRepository.h  README.md  RegularPatient.cpp  RegularPatient.h  ServerConnectionHandler.cpp  ServerConnectionHandler.h  ServerConnectionManager.cpp  ServerConnectionManager.h  VipPatient.cpp  VipPatient.h  classDiagram.vpp  common.h  queue.h  queueHospitalClient.cpp  queueHospitalClient.h  queueHospitalServer.cpp  queueHospitalServer.h
client/: ClientConnectionHandler.h  queueHospitalClient.h
client/implementations/: ClientConnectionHandler.cpp  queueHospitalClient.cpp
common/: common.h
common/implementations/: DataConverter.cpp  Patient.cpp  PatientDataConverter.cpp  RegularPatient.cpp  VipPatient.cpp
include/client/: ClientConnectionHandler.h
include/client/commands/common/: Authorization.h  Stopping.h
include/client/commands/doctor/: DoctorCommandHandler.h  ReceivingPatient.h
include/client/commands/patient/: PatientCommandHandler.h  PatientRegistration.h  VipPatientRegistration.h
include/common/: CommandHandler.h  Patient.h  PatientDataConverter.h  VipPatient.h
include/server/: DoctorAuthorization.h  PatientAuthorization.h  PatientQueue.h  PatientRepository.h  Queue.h  QueueHospitalServer.h  ServerConnectionHandler.h  ServerConnectionManager.h  queue.h
include/server/commands/common/: Authorization.h
include/server/commands/doctor/: DoctorAuthorization.h  DoctorCommandHandler.h  ReceivingPatient.h
include/server/commands/patient/: PatientAuthorization.h  PatientCommandHandler.h  PatientRegistration.h  VipPatientRegistration.h
server/implementations/: PatientRepository.cpp  ServerConnectionHandler.cpp  ServerConnectionManager.cpp  queueHospitalServer.cpp
source/client/: ClientConnectionHandler.cpp  QueueHospitalClient.cpp  queueHospitalClient.cpp
source/client/commands/common/: Authorization.cpp  Stopping.cpp
source/client/commands/doctor/: DoctorCommandHandler.cpp  ReceivingPatient.cpp
source/client/commands/patient/: PatientCommandHandler.cpp  PatientRegistration.cpp  VipPatientRegistration.cpp
source/common/: DataConverter.cpp  Patient.cpp  PatientDataConverter.cpp  RegularPatient.cpp  VipPatient.cpp
source/server/: Authorization.cpp  DoctorAuthorization.cpp  PatientAuthorization.cpp  PatientQueue.cpp  PatientRepository.cpp  QueueHospitalServer.cpp  ServerConnectionHandler.cpp  ServerConnectionManager.cpp  queueHospitalServer.cpp
source/server/commands/common/: Authorization.cpp
source/server/commands/doctor/: DoctorAuthorization.cpp  DoctorCommandHandler.cpp  ReceivingPatient.cpp
source/server/commands/patient/: PatientAuthorization.cpp  PatientCommandHandler.cpp  PatientRegistration.cpp  VipPatientRegistration.cpp
